2023-11-10
- Design/Layout Sachen
- AppUserBasePage2 eingeführt

2023-11-08
- Die Einzelnen Menüpunkte im Supermenü können jetzt an und ausgeschaltet werden.
- Das Supermenü wird jetzt auch durch ein Update der YacApp angepasst, also wenn die App-Configuration geändert wurde

2023-11-07
- Im Android funktionieren die Webviews (im Linux nicht)
- Angefangen das Menü konfigurierbar zu machen, also welche Inhalte überhaupt drin sind.

2023-11-05
- Es kann jetzt ein Fremdsystem für die Loginverwaltung angegeben werden. Als erstes ist da natürlich aidoo http://www.aidoo.de implementiert
- Wenn eine App verlassen wird, dann werden jetzt alle gespeicherten Daten gelöscht (auch der Cache)
- In den Nachrichten können Bilder versendet werden
- Es gibt jetzt eine "Waitmessage", die wird zum Beispiel beim Installationsvorgang oder beim Login angezeigt. Einfach, damit man sofort sieht, dass der Klick angenommen wurde
-

2023-04-18
- Der InstallationsCode wird jetzt abgefragt bei Installation einer App

2023-04-16
- InstallationCode und SearchCode angefangen zu implementieren

- Der InstallationCode wird lokal beim Configurator im Klartext gespeichert, auf dem Server nur noch als Hashwert

- Nach dem Search-Code kann jetzt gesucht werden

2023-04-15
- Darstellung der App-Auswahl

- Es kann nach einer App gesucht werden

2023-03-27
- Die AppUserProfileList gibt jetzt eine Liste mit neu ausgewählten und mit neu entfernten ProfileIDs aus

- Kontakte können jetzt einer Rechtegruppe hinzugefügt werden

2023-03-26
- Bei einem Space kann jetzt angegeben werden, ob Zutrittsanfragen zugelassen werden. (Ich glaube, dass das nervig sein kann, wenn da alle immer wieder nachfragen)
Wenn die Anträge nicht möglich sind, dann soll der Space nur per Code betreten werden oder man wird halt vom Admin hinzugefügt.

- In den News werden die Spacerequests jetzt als Extra Kacheln und mit Namen des Requesters und dessen Bild angezeigt.
Zulassen kann man noch nicht.
