@@ -338,13 +338,4 @@ Item
             }
         }
     }
-
-
-    Loader
-    {
-        id: appUserProfileLoader
-        anchors.fill: parent
-        active: yacApp.globalConfig.appUserEnabled
-        source: "qrc:/qml/apppages/AppUserProfileIcon.qml"
-    }
 }
